[package]
name = "day-15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
ndarray = "0.15.2"
ndarray-linalg = { version = "0.16.0", features = ["openblas", "openblas-system"] }
num = "0.4.1"
